--- a/index.html
+++ b/index.html
@@ -14,24 +14,14 @@
         [v-cloak] {display: none}
     </style>
 </head>
-<body class="font-sans">
-    <header class="p-3 text-center bg-white border-b z-20 relative">
-        <img src="_assets/images/logo.jpg" alt="" class="rounded-full border-indigo-dark shadow h-12">
-        <div class="text-sm mt-2">Michael Zanggl</div>
-        <div class="pt-5 pb-4 text-xl">
-            <a class="text-grey-darkest" href="https://github.com/MZanggl" aria-label="github"><i class="fab fa-github px-2"></i></a>
-            <a class="text-grey-darkest" href="https://dev.to/mzanggl" aria-label="dev.to"><i class="fab fa-dev px-2"></i></a>
-            <a class="text-grey-darkest" href="mailto:michaelzanggl@gmail.com" aria-label="mail"><i class="fa fa-envelope px-2"></i></a>
-        </div>
+<body class="font-sans bg-grey-lightest">
+    <header class="p-32 text-center relative">
+        <img src="_assets/images/logo.jpg" alt="" class="rounded-full border-indigo-dark shadow h-24">
+        <div class="mt-8 text-lg text-grey-darkest font-bold">Michael Zanggl</div>
     </header>
-    <div class="p-3 text-center bg-white border-b z-10 fixed pin-t pin-l w-full">
-        <img src="_assets/images/logo.jpg" alt="" class="align-middle rounded-full border-indigo-dark shadow h-12">
-        <span class="ml-1 align-middle text-sm">Michael Zanggl</span>
-    </div>
     <main id="app">
-    
-        <noscript>This app requires a Javascript enabled browser.</noscript>
-        <div class="py-16 px-3 bg-purple-darker">
+        <noscript>This website requires a Javascript enabled browser.</noscript>
+        <div class="pb-16 px-3">
             <h3 class="text-center text-grey-lightest text-xl font-medium">Recent projects</h3>
             <div class="my-2 px-6 py-4">
                 <div class="mx-auto bg-white max-w-md shadow rounded-t-lg rounded-b-lg overflow-hidden">
@@ -106,7 +96,7 @@
 
                 <div class="text-center mt-2">
                     <a href="https://github.com/MZanggl/">
-                        <button class="px-4 py-1 leading-normal bg-transparent text-white font-semibold hover:font-bold">
+                        <button class="px-4 py-1 leading-normal bg-transparent text-grey-darkest font-semibold hover:font-bold">
                             <i class="fab fa-github pr-1"></i>
                             More on GitHub
                         </button>
@@ -129,9 +119,9 @@
 
         <div class="my-16 px-4 container mx-auto" v-cloak>
             <h3 class="text-center text-grey-darkest text-xl">Blog posts</h3>
-            <div v-for="article in articles" :key="article.url" class="bg-white mx-auto max-w-sm my-5 px-6 py-4">
+            <div v-for="article in articles" :key="article.url" class="bg-white mx-auto max-w-md my-8 px-6 py-4 rounded shadow">
                 <a :href="article.url" class="no-underline text-grey-darkest">
-                    <p class="text-xl leading-tight font-bold mb-1">
+                    <p class="text-xl leading-tight font-bold flex items-center justify-between">
                         <span class="align-middle mr-1" v-text="article.title"></span>
                         <template v-if="article.labels">
                             <template v-for="label in article.labels.split(',')">
@@ -140,14 +130,14 @@
                         </template>
                     </p>
                 </a>
-                <p class="text-sm leading-tight text-grey-darker" v-text="article.teaser"></p>
+                <p class="mt-3 text-sm leading-tight text-grey-darker" v-text="article.teaser"></p>
                 <a :href="article.url" class="block mt-4" :aria-label="article.title">
                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Read</button>
                 </a>
             </div>
 
             <div class="text-center mt-8">
-                <a href="https://dev.to/mzanggl">
+                <a href="https://dev.to/michi">
                     <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">
                         More on DEV
                     </button>
@@ -159,8 +149,7 @@
     <footer class="text-center bg-indigo-lightest py-5 relative">
         <div class="text-xl">
             <a class="text-indigo-darkest" href="https://github.com/MZanggl" aria-label="github"><i class="fab fa-github px-2"></i></a>
-            <a class="text-indigo-darkest" href="https://dev.to/mzanggl" aria-label="dev.to"><i class="fab fa-dev px-2"></i></a>
-            <a class="text-indigo-darkest" href="mailto:michaelzanggl@gmail.com" aria-label="mail"><i class="fa fa-envelope px-2"></i></a>
+            <a class="text-indigo-darkest" href="https://dev.to/michi" aria-label="dev.to"><i class="fab fa-dev px-2"></i></a>
         </div>
     </footer>
 
