--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="mx-auto bg-white max-w-md shadow rounded-t-lg rounded-b-lg overflow-hidden">
                     <div class="border-b border-purple-lightest">
                         <div class="sm:flex sm:items-center px-6 py-4">
-                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://ipluseins.com/images/logo.png" alt="">
+                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://ipluseins.com/images/logos/128.png" alt="">
                             <div class="text-center sm:text-left sm:flex-grow">
                                 <div class="mb-4">
                                     <p class="text-xl leading-tight">ipluseins</p>
