replace with redirect

--- a/chouchou/index.html
+++ b/chouchou/index.html
@@ -1,72 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<link href="main.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet"> 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<title>chouchou - Free Japanese Dictionary</title>
-	<meta name="viewport" content="initial-scale=1, maximum-scale=5, minimum-scale=1, width=device-width" />
-	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
-	<meta name="description" content="free Japanese dictionary chouchou">
-	<meta name="author" content="Michael Zanggl">
-</head>
-<body>
-	<div class="wrapper">
-		<header>
-			<div class="title-wrapper">
-				<h1>
-					<hr>
-					<span>
-						<img src="logobf114.png" alt="chouchou logo">
-					</span>
-				</h1>
-				<h5>
-					chouchou - More than just a dictionary
-				</h5>
-			</div>
-			<div id="device-art">
-				<img class="img-fluid" src="device-art.png" alt="">
-			</div>
-		</header>
-		<div class="text-center get-wrapper">
-			<a class="appstore-ref" href='https://play.google.com/store/apps/details?id=com.manabi.app&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
-		</div>
-		<section class="highlights-wrapper">
-			<div class="container">
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://michaelzanggl.com/chouchou" />
+    <link rel="canonical" href="https://michaelzanggl.com/chouchou">
+  </head>
 
-				<ul class="row">
-					<li class="col-md-6">
-						<i class="fa fa-share-alt-square"></i> 
-						<span><h2>Convenient</h2>Share sentences, words and kanji entries to flash card apps</span>
-					</li>
-					<li class="col-md-6">
-						<i class="fa fa-copy"></i>
-						<span><h2>Be super fast</h2>Provides convenient features like automatically searching for copied content</span>
-					</li>
-					<li class="col-md-6">
-						<i class="fa fa-link"></i>
-						<span><h2>Natural</h2>References to Japanese forums and social media</span>
-					</li>
-					<li class="col-md-6">
-						<i class="fa fa-calendar-alt"></i>
-						<span><h2>Your study-pal</h2>We help you with your studies and teach you a new Onomatope (e.g. girigiri) every day</span>
-					</li>
-					<li class="col-md-6">
-						<i class="fa fa-comments"></i>
-						<span><h2>Community</h2>What's the difference between two similar words? When are they used? Each word entry provides its own space for discussion</span>
-					</li>
-					<li class="col-md-6">
-						<i class="fa fa-ellipsis-h"></i>
-						<span><h2>Much More</h2>These were just some of the highlights. One hand usabilty, splitscreen, notes and much more is waiting inside the app</span>
-					</li>
-				</ul>
-			</div>
-		</section>
-	</div>
-	<footer>
-		Google Play and the Google Play logo are trademarks of Google LLC.
-	</footer>
-</body>
+  <body>
+    <p><a href="https://michaelzanggl.com/chouchou">This site moved!</a></p>
+  </body>
 </html>
