--- a/index.html
+++ b/index.html
@@ -1,161 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Portfolio of Michael Zanggl">
-    <title>Michael Zanggl</title>
-    <link href="https://unpkg.com/tailwindcss@^0.7.4/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="shortcut icon" type="image/jpeg" href="_assets/images/logo.jpg">
-    <link rel="preconnect" href="https://firestore.googleapis.com" crossorigin>
-    <style>
-        [v-cloak] {display: none}
-    </style>
-</head>
-<body class="font-sans bg-grey-lightest">
-    <header class="p-32 text-center relative">
-        <img src="_assets/images/logo.jpg" alt="" class="rounded-full border-indigo-dark shadow h-24">
-        <div class="mt-8 text-lg text-grey-darkest font-bold">Michael Zanggl</div>
-    </header>
-    <main id="app">
-        <noscript>This website requires a Javascript enabled browser.</noscript>
-        <div class="pb-16 px-3">
-            <h3 class="text-center text-grey-lightest text-xl font-medium">Recent projects</h3>
-            <div class="my-2 px-6 py-4">
-                <div class="mx-auto bg-white max-w-md shadow rounded-t-lg rounded-b-lg overflow-hidden">
-                    <div class="border-b border-purple-lightest">
-                        <div class="sm:flex sm:items-center px-6 py-4">
-                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://ipluseins.com/images/logos/128.png" alt="">
-                            <div class="text-center sm:text-left sm:flex-grow">
-                                <div class="mb-4">
-                                    <p class="text-xl leading-tight">ipluseins</p>
-                                    <p class="text-sm leading-tight text-grey-darker">Free language learning service</p>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <a href="https://ipluseins.com" aria-label="ipluseins">
-                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://michaelzanggl.com" />
+    <link rel="canonical" href="https://michaelzanggl.com">
+  </head>
 
-                    <div class="border-b border-purple-lightest">
-                        <div class="sm:flex sm:items-center px-6 py-4">
-                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="/chouchou/logobf114.png" alt="">
-                            <div class="text-center  sm:text-left sm:flex-grow">
-                                <div class="mb-4">
-                                    <p class="text-xl leading-tight">chouchou</p>
-                                    <p class="text-sm leading-tight text-grey-darker">Japanese offline dictionary</p>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <a href="/chouchou" aria-label="chouchou">
-                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Visit</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="border-b border-purple-lightest">
-                        <div class="sm:flex sm:items-center px-6 py-4">
-                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="/_assets/images/promistate.png" alt="">
-                            <div class="text-center sm:text-left sm:flex-grow">
-                                <div class="mb-4">
-                                    <p class="text-xl leading-tight">promistate</p>
-                                    <p class="text-sm leading-tight text-grey-darker">Manage your promised state swiftly</p>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <a href="https://github.com/MZanggl/promistate" aria-label="promistate">
-                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="">
-                        <div class="sm:flex sm:items-center px-6 py-4">
-                            <img class="block w-16 mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="_assets/images/adonis-vue-logo.png" alt="">
-                            <div class="text-center sm:text-left sm:flex-grow">
-                                <div class="mb-4">
-                                    <p class="text-xl leading-tight">Adonis / Vue blueprint</p>
-                                    <p class="text-sm leading-tight text-grey-darker">Fullstack boilerplate for AdonisJs and VueJs</p>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <a href="https://github.com/MZanggl/adonis-vue-demo" aria-label="adonis vue demo">
-                                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Source</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="text-center mt-2">
-                    <a href="https://github.com/MZanggl/">
-                        <button class="px-4 py-1 leading-normal bg-transparent text-grey-darkest font-semibold hover:font-bold">
-                            <i class="fab fa-github pr-1"></i>
-                            More on GitHub
-                        </button>
-                    </a>
-                </div>
-
-            </div>
-        </div>
-        
-        <div class="py-10 px-3 bg-indigo-darkest text-left text-white" v-cloak>
-            <div class="mx-auto max-w-md font-mono text-sm">
-                <div class="mb-1">{</div>
-                <div v-for="(value, key, index) in description" class="ml-3 mb-1">
-                    <span class="text-blue-light">"{{ key }}"</span>:
-                    <span class="text-yellow-light">"{{ value }}"</span><span v-if="index + 1 < descriptionLength">,</span>
-                </div>
-                }
-            </div>
-        </div>
-
-        <div class="my-16 px-4 container mx-auto" v-cloak>
-            <h3 class="text-center text-grey-darkest text-xl">Blog posts</h3>
-            <div v-for="article in articles" :key="article.url" class="bg-white mx-auto max-w-md my-8 px-6 py-4 rounded shadow">
-                <a :href="article.url" class="no-underline text-grey-darkest">
-                    <p class="text-xl leading-tight font-bold flex items-center justify-between">
-                        <span class="align-middle mr-1" v-text="article.title"></span>
-                        <template v-if="article.labels">
-                            <template v-for="label in article.labels.split(',')">
-                                <span v-text="label" class="font-normal rounded-full bg-purple-dark text-xs align-middle px-2 py-1 text-grey-lightest"></span>
-                            </template>
-                        </template>
-                    </p>
-                </a>
-                <p class="mt-3 text-sm leading-tight text-grey-darker" v-text="article.teaser"></p>
-                <a :href="article.url" class="block mt-4" :aria-label="article.title">
-                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">Read</button>
-                </a>
-            </div>
-
-            <div class="text-center mt-8">
-                <a href="https://dev.to/michi">
-                    <button class="text-xs font-semibold rounded-full px-4 py-1 leading-normal bg-white border border-purple-dark text-purple-dark hover:bg-purple-dark hover:text-white">
-                        More on DEV
-                    </button>
-                </a>
-            </div>
-        </div>
-
-    </main>
-    <footer class="text-center bg-indigo-lightest py-5 relative">
-        <div class="text-xl">
-            <a class="text-indigo-darkest" href="https://github.com/MZanggl" aria-label="github"><i class="fab fa-github px-2"></i></a>
-            <a class="text-indigo-darkest" href="https://dev.to/michi" aria-label="dev.to"><i class="fab fa-dev px-2"></i></a>
-        </div>
-    </footer>
-
-    <script src="_assets/scripts/vue.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js"></script>
-    <script src="_assets/scripts/main.js?d=20190328"></script>
-</body>
+  <body>
+    <p><a href="https://michaelzanggl.com">This site moved!</a></p>
+  </body>
 </html>
